[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Dock.png" type="Texture" id=1]
[ext_resource path="res://Dock/Dock.gd" type="Script" id=2]
[ext_resource path="res://Ship/Ship.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/input_error.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 15 )

[node name="Dock" type="StaticBody2D" groups=["Dock"]]
script = ExtResource( 2 )
ship_path = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Claim_timer" type="Timer" parent="."]

[node name="Checking_zones" type="Node2D" parent="."]

[node name="Down_zone" type="Area2D" parent="Checking_zones"]
position = Vector2( 0, 35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checking_zones/Down_zone"]
shape = SubResource( 3 )

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Claim_timer" to="." method="_on_Claim_timer_timeout"]
[connection signal="area_entered" from="Checking_zones/Down_zone" to="." method="_on_Down_zone_area_entered"]
[connection signal="area_exited" from="Checking_zones/Down_zone" to="." method="_on_Down_zone_area_exited"]
